# GaLore

./: .dockerignore  .gitignore  CITATION.cff  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_glue.py  setup.py  torchrun_main.py
.github/workflows/: build.yml
configs/: llama_100m.json  llama_130m.json  llama_1b.json  llama_20m.json  llama_250m.json  llama_350m.json  llama_35m.json  llama_3b.json  llama_40m.json  llama_60m.json  llama_71m.json  llama_7b.json  llama_9m.json
docker/: Dockerfile
galore_torch/: __init__.py  adafactor.py  adamw.py  adamw8bit.py  galore_projector.py  galore_projector_sketching.py  galore_projector_tensor.py
galore_torch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
galore_torch/fused/: NOTE.md  utils.py
galore_torch/fused/triton_utils/: custom_autotune.py
galore_torch/fused/triton_utils/kernels/: adam_downproj_fused.py  adam_step.py  matmul.py
peft_pretraining/: args_utils.py  dataloader.py  modeling_llama.py  training_utils.py
scripts/benchmark_c4/: llama_130m.sh  llama_1b.sh  llama_350m.sh  llama_60m.sh  llama_7b.sh
scripts/single_gpu/: llama_7b.sh  llama_7b_checkpointing.sh
scripts/tensor_test/: neural_operator.py
tests/: test_fused.py  test_fused_kernels.py  test_utils.py
